tests/snapshots/conformance__y_structure_lonely_true.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
true
stdout --- 
true
stderr --- 
<empty>
