tests/snapshots/conformance__y_structure_true_in_array.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[true]
stdout --- 
[true]
stderr --- 
<empty>
