tests/snapshots/conformance__y_structure_whitespace_array.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
 [] 
stdout --- 
[]
stderr --- 
<empty>
